arrival notice on mobile fixed

--- a/frontend/public/css/style.css
+++ b/frontend/public/css/style.css
@@ -476,7 +476,7 @@ div#arrivalnotice table {
 
   #phonenumber {
     top: 50%;
-    background-color: #04AA6D;
+    background-color: #04aa04;
     
   }
   #phonenumber:hover span{
